--- a/views/village.html
+++ b/views/village.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>村庄</title>
   <link rel="stylesheet" href="../style.css">
-  <script src="../utils/three.js"></script>
+  <script src="http://cdn.bootcss.com/three.js/r83/three.min.js"></script>
   <script src="../utils/orbitControls.js"></script>
   <script src="../utils/resize.js"></script>
   <script src="../utils/ThreeBSP.js"></script>
-  <script src="../utils/tween.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js"></script>
   <style>
     body {
       background-color: #f3e6dd
