--- a/views/village.html
+++ b/views/village.html
@@ -148,10 +148,10 @@
       mainLight.shadow.bias = 0
       mainLight.shadow.mapSize.width = 1024
       mainLight.shadow.mapSize.height = 1024
-      mainLight.shadowCameraLeft = -10;
-      mainLight.shadowCameraRight = 10;
-      mainLight.shadowCameraTop = 10;
-      mainLight.shadowCameraBottom = -10;
+      mainLight.shadowCameraLeft = -10
+      mainLight.shadowCameraRight = 10
+      mainLight.shadowCameraTop = 10
+      mainLight.shadowCameraBottom = -10
       // 辅助光
       supplyLight = new THREE.DirectionalLight(0xffe8d8, .3)
       supplyLight.position.set(-50, 60, 50)
